<resources>
    <string name="app_name">yapura</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="book">Book Now!</string>


    <!-- Pinjam Ruangan -->
    <string name="kelas">Kelas</string>
    <string name="LH">Lecture Hall</string>
    <string name="SL">Student Lounge</string>
    <string name="FH">Function Hall</string>

    <!-- Pinjam alat -->
    <string name="proyektor">Proyektor</string>
    <string name="soundsystem">Sound System</string>
    <string name="kabel">Kabel Roll</string>

    <string name="title_activity_splash_screen">SplashScreen</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>